--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -16,7 +16,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @division.users.unscoped.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
+        <% @division.users.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
           <tr>
             <td><%= i+1 %></td>
             <td><%= user %></td>
