--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -72,7 +72,7 @@
               <%= link_to t('surveys'), surveys_path %>
             </li>
             <li class="<%= (controller_name == 'users' ? 'active' : '') %>">
-              <%= link_to t('users'), admin_users_path %>
+              <%= link_to t('users'), users_path %>
             </li>
           </ul>
         </li>
