--- a/app/views/assigned_questions/_form.html.erb
+++ b/app/views/assigned_questions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [parent,@assigned_question], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.simple_fields_for :question do |question_form| %>
   
-    <% resource.organization.locales.each do |l| %>
+    <% (resource.organization || parent.organization).locales.each do |l| %>
       <h4><%=t l.name %></h4>
       <%= question_form.globalize_fields_for l.code.to_sym do |g| %>
         <%= g.input :short_text %>
