--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -10,6 +10,7 @@
   <% end %>
   
   <%= f.input :active %>
+  <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
   
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
