--- a/app/views/assigned_question_sets/_form.html.erb
+++ b/app/views/assigned_question_sets/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [parent,@assigned_question_set], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.simple_fields_for :question_set do |question_set_form| %>
-  
+    <%= question_set_form.input :organization_id, as: :hidden, input_html: {value: parent.organization_id} %>
+    
     <% (resource.organization || parent.organization).locales.each do |l| %>
       <h4><%=t l.name %></h4>
       <%= question_set_form.globalize_fields_for l.code.to_sym do |g| %>
