--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -42,7 +42,7 @@
             <% 0.upto(assigned_question_set.question_set.max_responses).each do |i| %>
               <td>
                 <% if assigned_question.question.responses[i] %>
-                  <a data-suggestion="<%=j assigned_question.question.responses[i].suggestion %>" data-response_id="<%= assigned_question.question.responses[i].id %>" data-question_id="<%= assigned_question.question.id %>" href="#" class="answer btn <%= response_css_point_class(assigned_question.question.responses[i],i+1) %>" data-value="<%= assigned_question.question.responses[i].points %>"><%= assigned_question.question.responses[i].short_text.try(:html_safe) %></a>
+                  <a data-suggestion="<%=j assigned_question.question.responses[i].suggestion %>" data-response_id="<%= assigned_question.question.responses[i].id %>" data-question_id="<%= assigned_question.question.id %>" href="#" class="answer btn <%= response_css_point_class(assigned_question.question.responses[i],i+1) %>" data-value="<%= assigned_question.question.responses[i].points %>"><%= assigned_question.question.responses[i].short_text.try(:html_safe) %> <span class="print-only">(<%= assigned_question.question.responses[i].points %>)</span></a>
                 <% else %>
                   &nbsp;
                 <% end %>
