--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -23,6 +23,7 @@
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
+          <%= link_to t('print'), root_path(survey_id: survey.id, print: true), :class => 'btn btn-primary btn-mini', target: "_blank" %>
         </td>
       </tr>
     <% end %>
