--- a/app/views/users/show.csv.erb
+++ b/app/views/users/show.csv.erb
@@ -7,12 +7,13 @@ csv_output = csv_lib.generate(headers: true) do |csv|
   
   max_responses = @user.completed_surveys.where{ date >> my{@dates}}.max_by{ |completed_survey| completed_survey.selected_responses.count }.try(:selected_responses).try(:count) || 0
   
-  last_survey = @user.completed_surveys.where{ date >> my{@dates}}.last
+  last_survey = @user.completed_surveys.where{ date >> my{@dates}}.reorder{ date.asc }.last
   
   last_survey.questions.each do |question|
     arr = [question.short_text]
     @dates.reverse.each do |date|
-      completed_survey = @user.completed_surveys.find_by_date(date)
+      #completed_survey = @user.completed_surveys.find_by_date(date)
+      completed_survey = @user.completed_surveys.where{ (date == my{date}) & survey_id == my{last_survey.id}}.last
       if completed_survey.nil?
         arr << 'NA'
       else
