--- a/app/views/users/show.csv.erb
+++ b/app/views/users/show.csv.erb
@@ -12,9 +12,9 @@ csv_output = csv_lib.generate(headers: true) do |csv|
   last_survey.questions.each do |question|
     arr = [question.short_text]
     @dates.reverse.each do |date|
-      #completed_survey = @user.completed_surveys.find_by_date(date)
-      completed_survey = @user.completed_surveys.where{ (date == my{date}) & survey_id == my{last_survey.id}}.last
-      if completed_survey.nil?
+      completed_survey = @user.completed_surveys.find_by_date(date)
+      #completed_survey = @user.completed_surveys.where{ (date == my{date}) & survey_id == my{last_survey.id}}.last
+      if completed_survey.nil? || completed_survey.survey_id != last_survey.id
         arr << 'NA'
       else
         selected_responses = completed_survey.selected_responses.joins{ response.question }.where{ response.question.short_text == my{question.short_text}}
