--- a/app/views/assigned_surveys/index.html.erb
+++ b/app/views/assigned_surveys/index.html.erb
@@ -5,25 +5,19 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:survey_id) %></th>
-      <th><%= model_class.human_attribute_name(:division_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @assigned_surveys.each do |assigned_survey| %>
       <tr>
-        <td><%= link_to assigned_survey.id, resource_path %></td>
-        <td><%= assigned_survey.survey_id %></td>
-        <td><%= assigned_survey.division_id %></td>
-        <td><%=l assigned_survey.created_at %></td>
+        <td><%= link_to assigned_survey, [parent,assigned_survey] %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_assigned_survey_path(assigned_survey), :class => 'btn btn-mini' %>
+                      [:edit,parent,assigned_survey], :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      assigned_survey_path(assigned_survey),
+                      [parent,assigned_survey],
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
@@ -34,5 +28,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_assigned_survey_path,
+            [:new,parent,:assigned_survey],
             :class => 'btn btn-primary' %>
