--- a/app/views/assigned_surveys/index.html.erb
+++ b/app/views/assigned_surveys/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = AssignedSurvey -%>
 <div class="page-header clearfix">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h1><%=t 'surveys_assigned_to', to: parent.to_s %></h1>
 </div>
 <table class="table table-striped">
   <thead>
