--- a/app/views/point_ranges/_form.html.erb
+++ b/app/views/point_ranges/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for [parent, @point_range], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :name %>
   <%= f.input :low %>
   <%= f.input :high %>
-  <%= f.input :description %>
+  <%#= f.input :description %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
