--- a/app/views/users/show.csv.erb
+++ b/app/views/users/show.csv.erb
@@ -17,10 +17,10 @@ csv_output = csv_lib.generate(headers: true) do |csv|
       if completed_survey.nil? || completed_survey.survey_id != last_survey.survey_id
         arr << 'NA (old survey)'
       else
-        selected_responses = completed_survey.selected_responses.joins{ response.question }.where{ response.question.short_text == my{question.short_text}}
+        selected_responses = completed_survey.selected_responses.joins{ response.question }.where{ response.question.id == my{question.id}}
         
         if selected_responses.empty?
-          arr << "#{question.short_text}"
+          arr << "#{question.id}"
         else
           arr << selected_responses.first.response.points
         end
