--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,6 +2,8 @@
 <div class="page-header clearfix">
   <h1 class="pull-left"<h1><%= parent %> <%= @group %></h1></h1>
   <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large pull-right' %>
+  <%= link_to t('add_member'),
+              new_group_user_path(@group), :class => 'btn btn-primary btn-large pull-right'  %>
 </div>
 
 <% if can?(:mange, @group) %>
