--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -1,8 +1,33 @@
 <%- model_class = Division -%>
-<div class="page-header clearfix clearfix row-fluid">
-  <h1 class="span8"><%= @division.name %></h1>
-  <%= link_to t('history'), current_user, class: 'btn btn-large span2 offset2' %>
-</div>
+
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to resource.organization, [resource.organization] %><span class="divider">/</span></li>
+      <li><%= link_to t('divisions'), [current_user, :divisions] %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6 btn-group">
+    <%= link_to t('history'), current_user, class: 'btn btn-large' %>
+    <%= link_to t('surveys'),
+                [@division,:assigned_surveys], :class => 'btn btn-large'  %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_division_path(@division), :class => 'btn btn-large' %>
+    <%= link_to t('create_new_group'),
+                new_division_group_path(@division), :class => 'btn btn-primary btn-large'  %>
+
+
+
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                division_path(@division),
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-danger btn-large' %>
+  </div>
+<% end %>
+
 
 <div class="row-fluid">
   <div class="span6">
@@ -50,33 +75,3 @@
     </table>
   </div>
 </div>
-
-<% if can?(:update, @division) %>
-
-  <dl class="dl-horizontal">
-    <dt><strong><%= model_class.human_attribute_name(:organization_id) %>:</strong></dt>
-    <dd><%= link_to @division.organization, @division.organization %></dd>
-  
-    <dt><strong><%=t 'groups' %>:</strong></dt>
-    <dd><%= raw(@division.groups.map{|group| link_to(group, [@division,group])}.join(', ')) %></dd>
-  </dl>
-
-
-  <div class="form-actions">
-    <%= link_to t('create_new_group'),
-                new_division_group_path(@division), :class => 'btn btn-primary'  %>
-    
-    <%= link_to t('surveys'),
-                [@division,:assigned_surveys], :class => 'btn'  %>
-                          
-    <%= link_to t('.back', :default => t("helpers.links.back")),
-                divisions_path, :class => 'btn'  %>
-    <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                edit_division_path(@division), :class => 'btn' %>
-    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                division_path(@division),
-                :method => 'delete',
-                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                :class => 'btn btn-danger' %>
-  </div>
-<% end %>
