--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,20 @@
 <%- model_class = Group -%>
-<div class="page-header clearfix">
-  <h1 class="pull-left"<h1><%= parent %> <%= @group %></h1></h1>
-  <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large pull-right' %>
-  <%= link_to t('add_member'),
-              new_group_user_path(@group), :class => 'btn btn-primary btn-large pull-right'  %>
-</div>
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to resource.organization, [resource.organization] %><span class="divider">/</span></li>
+      <li><%= link_to t('divisions'), [current_user, :divisions] %><span class="divider">/</span></li>
+      <li><%= link_to resource.division, [current_user, resource.division] %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6 btn-group">
+    <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large pull-right' %>
+    <%= link_to t('add_member'),
+                new_group_user_path(@group), :class => 'btn btn-primary btn-large pull-right'  %>
+  </div>
+<% end %>
 
 <% if can?(:mange, @group) %>
   <dl class="dl-horizontal">
