--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,6 +1,22 @@
-<%= simple_form_for @survey, :html => { :class => 'form-horizontal' } do |f| %>
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <% if !resource.new_record? %>
+        <li><%= link_to resource.organization, [resource.organization] %><span class="divider">/</span></li>
+      <% end %>
+      <li><%= link_to t('surveys'), [:surveys] %><span class="divider">/</span></li>
+      <li class="active"><%= resource.new_record? ? t("new_survey") : t("edit_survey") %></li>
+    </ul>
+  </div>  
+<% end %>
 
-  <%= f.association :organization, collection: Organization.with_role('admin', current_user), include_blank: false %>
+<%= simple_form_for resource, :html => { :class => 'form-horizontal' } do |f| %>
+  
+  <% if Organization.with_role('admin', current_user).count > 1 %>
+    <%= f.association :organization, collection: Organization.with_role('admin', current_user), include_blank: false %>
+  <% else %>
+    <%= f.input :organization_id, as: :hidden, input_html: {value: Organization.with_role('admin', current_user).first.id } %>
+  <% end %>
   
   <% (resource.organization || Organization.with_role('admin', current_user).first).locales.each do |l| %>
     <h4><%=t l.name %></h4>
