--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,20 @@
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <% if parent? %>
+        <li><%= link_to parent.division.organization, [parent.division.organization] %><span class="divider">/</span></li>
+        <li><%= link_to t('divisions'), [current_user, :divisions] %><span class="divider">/</span></li>
+        <li><%= link_to parent.division, [current_user, parent.division] %><span class="divider">/</span></li>
+        <li><%= link_to parent, [parent.division, parent] %><span class="divider">/</span></li>
+      <% else %>
+        <li><%= link_to t("users"), [:users] %><span class="divider">/</span></li>
+      <% end %>
+      <li class="active"><%= resource.new_record? ? t("new_user") : t("edit_user") %></li>
+    </ul>
+  </div>  
+<% end %>
+
+
 <%= simple_form_for (parent? ? [parent,@user] : @user), :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :name %>
   <%= f.input :email %>
@@ -7,6 +24,7 @@
   
   <%= f.input :assigned_roles, collection: ['admin','athlete'], input_html: {include_blank: true, multiple: true} %>
   <%= f.input :change_roles, as: :hidden, input_html: {value: 1} %>
+  <%= f.association :groups, as: :check_boxes, label_method: :full_name %>
   
   
   <%= f.input :password %>
