--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,20 @@
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li class="active"><%=t 'users' %></li>
+    </ul>
+  </div>
+  
+  <div class="span6 btn-group">
+    <%= link_to t('new_user'), new_user_path, :class => 'btn btn-large btn-primary' %>
+  </div>
+<% end %>
+
+
 <%- model_class = User -%>
-<div class="page-header clearfix">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-</div>
 
 <% if current_user.try(:has_role?,'admin') %>
-  <table class="table table-striped">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th><%= model_class.human_attribute_name(:id) %></th>
@@ -46,8 +56,7 @@
       <% end %>
     </tbody>
   </table>
+  
+  <%= will_paginate @users %>
 
-  <%= link_to t('.new', :default => t("helpers.links.new")),
-              new_user_path,
-              :class => 'btn btn-primary' %>
 <% end %>
