--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,7 +32,7 @@
       </li>
     <% end %>
     
-    <% if can? :read, User %>
+    <% if can? :manage, User %>
       <li class="dropdown">
         <a href="#"class="dropdown-toggle" data-toggle="dropdown"><%=t 'users' %><b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -48,7 +48,7 @@
       </li>
     <% end %>
     
-    <% if can? :read, Division %>
+    <% if can? :manage, Division %>
       <li class="dropdown">
         <a href="#"class="dropdown-toggle" data-toggle="dropdown"><%=t 'divisions' %><b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -64,7 +64,7 @@
       </li>
     <% end %>
     
-    <% if can? :read, Survey %>
+    <% if can? :manage, Survey %>
       <li class="dropdown">
         <a href="#"class="dropdown-toggle" data-toggle="dropdown"><%=t 'surveys' %><b class="caret"></b></a>
         <ul class="dropdown-menu">
